--- a/bear/popup.html
+++ b/bear/popup.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="popup.js" charset="utf-8"></script>
+    <script src="popup.js"></script>
 </body>
 </html>
